crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__call__bool.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/call/bool.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: not callable: `true` is of type `Bool`
   ╭─[craftinginterpreters/test/call/bool.lox:1:1]
   │
 1 │ true(); // expect runtime error: Can only call functions and classes.
   │ ──┬─  
   │   ╰─── this expression is of type `Bool`
───╯
