crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__call__nil.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/call/nil.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: not callable: `nil` is of type `Nil`
   ╭─[craftinginterpreters/test/call/nil.lox:1:1]
   │
 1 │ nil(); // expect runtime error: Can only call functions and classes.
   │ ─┬─  
   │  ╰─── this expression is of type `Nil`
───╯
